Sonar issues fix